--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-#systemProp.sonar.host.url=http://localhost:9000
-systemProp.sonar.host.url=http://sonar:9000
+systemProp.sonar.host.url=http://localhost:9000
+#systemProp.sonar.host.url=http://sonar:9000
  
 #----- Security (when 'sonar.forceAuthentication' is set to 'true')
 systemProp.sonar.login=admin
